--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,9 +38,9 @@ dependencies:
   cupertino_icons: ^1.0.2
   url_launcher: ^6.2.5
 
-  carousel_slider: ^4.2.1
+  carousel_slider: ^5.0.0
   animated_splash_screen: ^1.3.0
-  camera: ^0.10.5+9 # For camera access
+  camera: ^0.11.0+2 # For camera access
   tflite_v2: ^1.0.0 # For TFLite integration
   image_picker: ^1.0.7
   razorpay_flutter: ^1.3.6
@@ -49,7 +49,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_launcher_icons: "^0.13.1"
+  flutter_launcher_icons: ^0.14.1
 
 
 flutter_launcher_icons:
